Backport: Handle unread-command-events consistently (bug#23980)

* src/keyboard.c (read_char): Events put into `unread-command-events'
with the form (t . EVENT) should always have the t stripped when read
out.
* test/src/keyboard-tests.el: New tests for `unread-command-events'.

(cherry picked from commit 1f3f4b1296613b8cdc0632a68fde86e86ddad866)